<resources>
    <item name="history_detail_pager" type="id" />
</resources>
